tests/sumo/pedestrian_model/striping/errors/route_invalid_permissions_ignore/errors.sumo.agg
Warning: Person 'p0' could not find sidewalk on edge 'end', time=0.00.
Warning: 1 total messages of type: Person '%' could not find sidewalk on edge '%', time=%.
